--- a/src/search/style.css
+++ b/src/search/style.css
@@ -4,8 +4,10 @@
     text-align: center;
     align-items: center;
     height: 500px;
+    
 }
-#searchbar{
+
+input{
     width: 50%;
     height: 30px;
     padding: 10px;
